--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,17 @@
 </head>
 <body>
 
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-92468913-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
+
 <div id="wrapper">
     <!--header start-->
     <header class="header header_theme_dark border-bottom">
@@ -18,7 +29,7 @@
                 <!--header__logo start-->
                 <div class="one-fifth column">
                     <div class="header__logo pt-2">
-                        <a href="#"><b>BUMBU.TV</b> <sup>&beta;</sup></a>
+                        <a href="http://bumbu.tv"><b>BUMBU.TV</b> <sup>&beta;</sup></a>
                     </div>
                 </div>
                 <!--header__logo   end-->
@@ -86,7 +97,7 @@
                         <div class="single-column">
                             <!--movie-list__item start-->
                             <div class="movie-list__item">
-                                <a href="#">
+                                <a href="http://bumbu.tv/view.html" target="_blank">
                                     <img src="dist/img/1.jpg" class="img-responsive js-tilt" alt="">
                                 </a>
                                 <div class="movie-list__item-desc">
@@ -101,7 +112,7 @@
                         <div class="single-column">
                             <!--movie-list__item start-->
                             <div class="movie-list__item">
-                                <a href="#">
+                                <a href="http://bumbu.tv/view.html" target="_blank">
                                     <img src="dist/img/2.jpg" class="img-responsive js-tilt" alt="">
                                 </a>
                                 <div class="movie-list__item-desc">
@@ -115,7 +126,7 @@
                         <div class="single-column">
                             <!--movie-list__item start-->
                             <div class="movie-list__item">
-                                <a href="#">
+                                <a href="http://bumbu.tv/view.html" target="_blank">
                                     <img src="dist/img/3.jpg" class="img-responsive js-tilt" alt="">
                                 </a>
                                 <div class="movie-list__item-desc">
@@ -129,7 +140,7 @@
                         <div class="single-column">
                             <!--movie-list__item start-->
                             <div class="movie-list__item">
-                                <a href="#">
+                                <a href="http://bumbu.tv/view.html" target="_blank">
                                     <img src="dist/img/4.jpg" class="img-responsive js-tilt" alt="">
                                 </a>
                                 <div class="movie-list__item-desc">
@@ -143,7 +154,7 @@
                         <div class="single-column">
                             <!--movie-list__item start-->
                             <div class="movie-list__item">
-                                <a href="#">
+                                <a href="http://bumbu.tv/view.html" target="_blank">
                                     <img src="dist/img/5.jpg" class="img-responsive js-tilt" alt="">
                                 </a>
                                 <div class="movie-list__item-desc">
@@ -158,7 +169,7 @@
                         <div class="single-column">
                             <!--movie-list__item start-->
                             <div class="movie-list__item">
-                                <a href="#">
+                                <a href="http://bumbu.tv/view.html" target="_blank">
                                     <img src="dist/img/1.jpg" class="img-responsive js-tilt" alt="">
                                 </a>
                                 <div class="movie-list__item-desc">
@@ -173,7 +184,7 @@
                         <div class="single-column">
                             <!--movie-list__item start-->
                             <div class="movie-list__item">
-                                <a href="#">
+                                <a href="http://bumbu.tv/view.html" target="_blank">
                                     <img src="dist/img/2.jpg" class="img-responsive js-tilt" alt="">
                                 </a>
                                 <div class="movie-list__item-desc">
