--- a/app/view_series.html
+++ b/app/view_series.html
@@ -14,10 +14,17 @@
 <body>
 
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-92468913-1', 'auto');
     ga('send', 'pageview');
@@ -65,40 +72,53 @@
     <!--header   end-->
 
     <!--movie-view start-->
-    <section class="movie-view">
+    <section class="series-view">
         <div class="container">
             <div class="columns">
                 <div class="single-column">
                     <!--movie-view__description start-->
-                    <div class="movie-view__description clearfix" style="background-image: url('dist/img/1-blur.jpg')">
-                        <div class="movie-view__description-poster">
-                            <img src="dist/img/1.jpg" class="img-responsive" alt="">
-                            <button class="btn btn-block btn-primary js-play-btn">Watch</button>
-                        </div>
-                        <div class="movie-view__description-info">
-                            <table>
-                                <tr>
-                                    <td>
-                                        <h1 class="movie-view__description-title">Обитель зла</h1>
-                                        <div class="movie-view__description-data">
-                                            <span>120 min</span>
-                                            <span>August 2016</span>
+                    <div class="series-view__description clearfix"
+                         style="background-image: url('dist/img/1-blur.jpg')">
+
+                        <div class="container">
+                            <div class="columns">
+                                <div class="one-half column">
+                                    <div class="series-view__description-poster">
+                                        <img src="dist/img/1.jpg" class="img-responsive" alt="">
+                                    </div>
+
+                                    <div class="series-view__description-text">
+                                        <h1 class="series-view__description-title">Обитель зла</h1>
+                                        <div class="series-view__description-data">
                                             <span>Fantasy, Fiction, Comedy</span>
                                         </div>
-                                        <p class="mb-0">
+                                        <p>
                                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci
                                                 animi cupiditate deserunt fugit, molestias repudiandae sapiente ullam?
                                                 Aspernatur aut in iure labore quisquam. Aliquam aliquid consequuntur
-                                                dolorum magnam qui? A alias aliquid delectus et, facere illo labore molestias neque omnis
-                                                qui sed, vitae? Architecto asperiores aut eius esse excepturi harum ipsa
                                                 iste maiores mollitia, provident, sequi similique unde voluptate?
                                             </small>
                                         </p>
-                                    </td>
-                                </tr>
-                            </table>
+                                    </div>
+                                </div>
+                                <div class="one-half column">
+
+                                    <div class="container outlined">
+                                        <div class="columns">
+                                            <div class="one-half column">
+                                                <div class=""></div>
+                                            </div>
+                                            <div class="one-half column">
+                                                <div class=""></div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
-                        <div class="movie-view__description-transparent-bg"></div>
+
+                        <div class="series-view__description-transparent-bg"></div>
                     </div>
                     <!--movie-view__description   end-->
                 </div>
@@ -146,10 +166,12 @@
                             <div class="right">
                                 <a href="#" class="btn btn-outline">All</a>
                                 <div class="btn-group">
-                                    <button class="btn" type="button" data-carousel="movies" data-direction="prev"><i class="fa fa-arrow-left"
-                                                                                                                      aria-hidden="true"></i></button>
-                                    <button class="btn" type="button"data-carousel="movies" data-direction="next"><i class="fa fa-arrow-right"
-                                                                                                                     aria-hidden="true"></i></button>
+                                    <button class="btn" type="button" data-carousel="movies" data-direction="prev"><i
+                                            class="fa fa-arrow-left"
+                                            aria-hidden="true"></i></button>
+                                    <button class="btn" type="button" data-carousel="movies" data-direction="next"><i
+                                            class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
                                 </div>
                             </div>
                         </header>
