VIEW SERIES - layout is ready

--- a/app/view.html
+++ b/app/view.html
@@ -32,7 +32,7 @@
                 <!--header__logo start-->
                 <div class="one-fifth column">
                     <div class="header__logo pt-2">
-                        <a href="http://bumbu.tv"><b>BUMBU.TV</b> <sup>&beta;</sup></a>
+                        <a href="http://bumbu.tv"><b>BUMBU.TV</b> <sup>&alpha;</sup></a>
                     </div>
                 </div>
                 <!--header__logo   end-->
@@ -64,23 +64,25 @@
     </header>
     <!--header   end-->
 
-    <!--movie-view start-->
-    <section class="movie-view">
+    <!--movie-details start-->
+    <section class="movie-details">
         <div class="container">
             <div class="columns">
                 <div class="single-column">
-                    <!--movie-view__description start-->
-                    <div class="movie-view__description clearfix" style="background-image: url('dist/img/1-blur.jpg')">
-                        <div class="movie-view__description-poster">
+                    <!--movie-details__description start-->
+                    <div class="movie-details__description clearfix" style="background-image: url('dist/img/1-blur.jpg')">
+                        <div class="movie-details__description-transparent-bg"></div>
+
+                        <div class="movie-details__description-poster">
                             <img src="dist/img/1.jpg" class="img-responsive" alt="">
                             <button class="btn btn-block btn-primary js-play-btn">Watch</button>
                         </div>
-                        <div class="movie-view__description-info">
+                        <div class="movie-details__description-info">
                             <table>
                                 <tr>
                                     <td>
-                                        <h1 class="movie-view__description-title">Обитель зла</h1>
-                                        <div class="movie-view__description-data">
+                                        <h1 class="movie-details__description-title">Обитель зла</h1>
+                                        <div class="movie-details__description-data">
                                             <span>120 min</span>
                                             <span>August 2016</span>
                                             <span>Fantasy, Fiction, Comedy</span>
@@ -98,14 +100,13 @@
                                 </tr>
                             </table>
                         </div>
-                        <div class="movie-view__description-transparent-bg"></div>
                     </div>
-                    <!--movie-view__description   end-->
+                    <!--movie-details__description   end-->
                 </div>
             </div>
         </div>
     </section>
-    <!--movie-view   end-->
+    <!--movie-details   end-->
 
     <!--video-player start-->
     <div class="video-player">
