--- a/app/view_series.html
+++ b/app/view_series.html
@@ -39,7 +39,7 @@
                 <!--header__logo start-->
                 <div class="one-fifth column">
                     <div class="header__logo pt-2">
-                        <a href="http://bumbu.tv"><b>BUMBU.TV</b> <sup>&beta;</sup></a>
+                        <a href="http://bumbu.tv"><b>BUMBU.TV</b> <sup>&alpha;</sup></a>
                     </div>
                 </div>
                 <!--header__logo   end-->
@@ -72,24 +72,26 @@
     <!--header   end-->
 
     <!--movie-view start-->
-    <section class="series-view">
+    <section class="series-details">
         <div class="container">
             <div class="columns">
                 <div class="single-column">
                     <!--movie-view__description start-->
-                    <div class="series-view__description clearfix"
-                         style="background-image: url('dist/img/1-blur.jpg')">
+                    <div class="series-details__description clearfix"
+                         style="background-image: url('dist/img/breaking-bad-header-1.jpg')">
+                        <div class="series-details__description-transparent-bg"></div>
 
-                        <div class="container">
+                        <div class="container position-relative">
                             <div class="columns">
                                 <div class="one-half column">
-                                    <div class="series-view__description-poster">
-                                        <img src="dist/img/1.jpg" class="img-responsive" alt="">
+                                    <div class="series-details__description-poster">
+                                        <img src="dist/img/Breaking-Bad-Poster-Season-4-Large.jpg"
+                                             class="img-responsive" alt="">
                                     </div>
 
-                                    <div class="series-view__description-text">
-                                        <h1 class="series-view__description-title">Обитель зла</h1>
-                                        <div class="series-view__description-data">
+                                    <div class="series-details__description-text">
+                                        <h1 class="series-details__description-title">Breaking bad</h1>
+                                        <div class="series-details__description-data">
                                             <span>Fantasy, Fiction, Comedy</span>
                                         </div>
                                         <p>
@@ -103,13 +105,70 @@
                                 </div>
                                 <div class="one-half column">
 
-                                    <div class="container outlined">
+                                    <div class="container px-0">
                                         <div class="columns">
-                                            <div class="one-half column">
-                                                <div class=""></div>
+                                            <div class="column pr-0" style="width: 40%;">
+                                                <div class="series-details__seasons pt-4">
+                                                    <ul class="series-details__seasons-list">
+                                                        <li><a href="#">Season 1</a></li>
+                                                        <li><a href="#" class="active">Season 2</a></li>
+                                                        <li><a href="#">Season 3</a></li>
+                                                        <li><a href="#">Season 4</a></li>
+                                                        <li><a href="#">Season 5</a></li>
+                                                        <li><a href="#">Season 6</a></li>
+                                                    </ul>
+                                                </div>
                                             </div>
-                                            <div class="one-half column">
-                                                <div class=""></div>
+                                            <div class="column pl-0" style="width: 60%;">
+                                                <div class="series-details__episodes">
+                                                    <ul class="series-details__episodes-list">
+                                                        <li style="background-image: url('dist/img/bb_1.jpg')">
+                                                            <a href="#" class="active">
+                                                                <span class="series-details__episode-duration"><i
+                                                                        class="fa fa-video-camera"
+                                                                        aria-hidden="true"></i> 59 min</span>
+                                                                <span class="series-details__episode-title">Episode 1</span>
+                                                                <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
+                                                            </a>
+                                                        </li>
+                                                        <li style="background-image: url('dist/img/bb_2.jpg')">
+                                                            <a href="#">
+                                                                <span class="series-details__episode-duration"><i
+                                                                        class="fa fa-video-camera"
+                                                                        aria-hidden="true"></i> 59 min</span>
+                                                                <span class="series-details__episode-title">Episode 2</span>
+                                                                <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
+                                                            </a>
+                                                        </li>
+                                                        <li style="background-image: url('dist/img/bb_3.jpg')">
+                                                            <a href="#">
+                                                                <span class="series-details__episode-duration"><i
+                                                                        class="fa fa-video-camera"
+                                                                        aria-hidden="true"></i> 59 min</span>
+                                                                <span class="series-details__episode-title">Episode 3</span>
+                                                                <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
+                                                            </a>
+                                                        </li>
+                                                        <li style="background-image: url('dist/img/bb_4.jpg')">
+                                                            <a href="#">
+                                                                <span class="series-details__episode-duration"><i
+                                                                        class="fa fa-video-camera"
+                                                                        aria-hidden="true"></i> 59 min</span>
+                                                                <span class="series-details__episode-title">Episode 4</span>
+                                                                <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
+                                                            </a>
+                                                        </li>
+                                                        <li style="background-image: url('dist/img/bb_5.jpg')">
+                                                            <a href="#">
+                                                                <span class="series-details__episode-duration"><i
+                                                                        class="fa fa-video-camera"
+                                                                        aria-hidden="true"></i> 59 min</span>
+                                                                <span class="series-details__episode-title">Episode 5</span>
+                                                                <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
+                                                            </a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -117,8 +176,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="series-view__description-transparent-bg"></div>
                     </div>
                     <!--movie-view__description   end-->
                 </div>
