VIEW SERIES - added custom scrollbar to seasons & episodes colimns

--- a/app/view_series.html
+++ b/app/view_series.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="dist/css/video-js.css">
     <link rel="stylesheet" href="dist/css/videojs.caption.css">
     <link rel="stylesheet" href="dist/css/video-player.css">
+    <link rel="stylesheet" href="dist/css/video-player.css">
+    <link rel="stylesheet" href="dist/css/jquery.custom-scrollbar.css">
 </head>
 <body>
 
@@ -71,7 +73,7 @@
     </header>
     <!--header   end-->
 
-    <!--movie-view start-->
+    <!--series-details start-->
     <section class="series-details">
         <div class="container">
             <div class="columns">
@@ -108,7 +110,7 @@
                                     <div class="container px-0">
                                         <div class="columns">
                                             <div class="column pr-0" style="width: 40%;">
-                                                <div class="series-details__seasons pt-4">
+                                                <div class="series-details__seasons default-skin py-2">
                                                     <ul class="series-details__seasons-list">
                                                         <li><a href="#">Season 1</a></li>
                                                         <li><a href="#" class="active">Season 2</a></li>
@@ -116,14 +118,23 @@
                                                         <li><a href="#">Season 4</a></li>
                                                         <li><a href="#">Season 5</a></li>
                                                         <li><a href="#">Season 6</a></li>
+                                                        <li><a href="#">Season 7</a></li>
+                                                        <li><a href="#">Season 8</a></li>
+                                                        <li><a href="#">Season 9</a></li>
+                                                        <li><a href="#">Season 10</a></li>
+                                                        <li><a href="#">Season 11</a></li>
+                                                        <li><a href="#">Season 12</a></li>
+                                                        <li><a href="#">Season 13</a></li>
+                                                        <li><a href="#">Season 14</a></li>
+                                                        <li><a href="#">Season 15</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
                                             <div class="column pl-0" style="width: 60%;">
-                                                <div class="series-details__episodes">
+                                                <div class="series-details__episodes default-skin">
                                                     <ul class="series-details__episodes-list">
                                                         <li style="background-image: url('dist/img/bb_1.jpg')">
-                                                            <a href="#" class="active">
+                                                            <a href="#">
                                                                 <span class="series-details__episode-duration"><i
                                                                         class="fa fa-video-camera"
                                                                         aria-hidden="true"></i> 59 min</span>
@@ -132,7 +143,7 @@
                                                             </a>
                                                         </li>
                                                         <li style="background-image: url('dist/img/bb_2.jpg')">
-                                                            <a href="#">
+                                                            <a href="#" class="active">
                                                                 <span class="series-details__episode-duration"><i
                                                                         class="fa fa-video-camera"
                                                                         aria-hidden="true"></i> 59 min</span>
@@ -167,6 +178,24 @@
                                                                 <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
                                                             </a>
                                                         </li>
+                                                        <li style="background-image: url('dist/img/bb_1.jpg')">
+                                                            <a href="#">
+                                                                <span class="series-details__episode-duration"><i
+                                                                        class="fa fa-video-camera"
+                                                                        aria-hidden="true"></i> 59 min</span>
+                                                                <span class="series-details__episode-title">Episode 1</span>
+                                                                <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
+                                                            </a>
+                                                        </li>
+                                                        <li style="background-image: url('dist/img/bb_2.jpg')">
+                                                            <a href="#">
+                                                                <span class="series-details__episode-duration"><i
+                                                                        class="fa fa-video-camera"
+                                                                        aria-hidden="true"></i> 59 min</span>
+                                                                <span class="series-details__episode-title">Episode 2</span>
+                                                                <span class="series-details__episode-descrition branch-ref css-truncate css-truncate-target">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat suscipit neque, id congue justo tincidunt ac</span>
+                                                            </a>
+                                                        </li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -182,7 +211,7 @@
             </div>
         </div>
     </section>
-    <!--movie-view   end-->
+    <!--series-details   end-->
 
     <!--video-player start-->
     <div class="video-player">
@@ -424,6 +453,7 @@
 <script src="dist/js/video-player-plugins/videojs.caption.js"></script>
 <script src="dist/js/video-player.js"></script>
 <script src="dist/js/owl.carousel.min.js"></script>
+<script src="dist/js/jquery.custom-scrollbar.min.js"></script>
 <script src="dist/js/app.js"></script>
 </body>
 </html>
